# snippeteer

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
evaluation/: evaluation.ipynb
evaluation/searches/github/: chess_ai.txt  edit_distance.txt  genetic.txt  maximum_flow_algorithm.txt  minimax.txt  moving_average_pandas.txt  normalize_vector_numpy.txt  quicksort.txt  radix_sort.txt  sharpe_ratio.txt
evaluation/searches/google/: chess ai python  edit distance python  genetic python  maximum flow algorithm python  minimax algorithm python  moving average pandas  normalize vector numpy  quicksort python  radix sort python  sharpe ratio python
evaluation/searches/snippetteer/: chess_ai.txt  edit_distance.txt  genetic.txt  maximum_flow_algorithm.txt  minimax_algorithm.txt  moving_average.txt  normalize_vector.txt  quicksort.txt  radix_sort.txt  sharpe_ratio.txt
snippeteer/crawl/: GithubCrawler.py  README.md  config.yaml  main.py
snippeteer/index/: README.md  __main__.py  create_index.py  dowload_files.py  parse_files.py  queries.py  search.py  try_parse.py
snippeteer/interface/: README.md  app.py
snippeteer/interface/static/: index.js  track.css
snippeteer/interface/templates/: index.html
snippeteer/parse/: function.py  imports.py  names.py  source_file.py
snippeteer/parse/ast_utils/: __init__.py  descend.py  extract.py  extract_names.py  node_children.py  nodes.py
test/parse/: test_function.py  test_imports.py  test_names.py  test_source_file.py
test/parse/ast_utils/: test_extract_names.py
(+2 files in other folders)
