[tool.poetry]
name = "snippeteer"
version = "0.1.0"
description = "Search engine for Python code snippets."
authors = ["malyvsen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
elasticsearch = "^7.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
jupyter = "^1.0.0"
plotly = "^4.14.3"
numpy = "^1.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
